Some page updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,14 +50,13 @@
       <span class="small">by <a href="http://github.com/seejohnrun">seejohnrun</a></span></h1>
 
     <div class="description">
-      Ruby Date Recurrence Library - Fast querying and expansion of recurrence rules
+      {{ page.tagline }}
     </div>
 
     {{ content }}
 
     <hr>
 
-    <h2>License</h2>
     <p>
       <em>
       (The MIT License)<br>
